--- a/css/styles.css
+++ b/css/styles.css
@@ -453,8 +453,6 @@ img {
 .footer-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer-studio {
@@ -463,13 +461,8 @@ img {
 
 .footer-social {
   margin-bottom: 72px;
-}
-
-.footer-subscribe {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-form {
@@ -487,6 +480,7 @@ img {
   letter-spacing: 0.02em;
   color: #fff;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .footer-input {
@@ -777,8 +771,6 @@ img {
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 0 16px;
-    margin: 0 auto;
   }
 
   .logo {
@@ -934,6 +926,7 @@ img {
   .footer-container {
     display: flex;
     flex-wrap: wrap;
+    max-width: 584px;
   }
 
   .footer-logo-text {
@@ -943,13 +936,16 @@ img {
   .social-media-text {
     text-align: left;
   }
+
+  .footer-form-text {
+    text-align: left;
+  }
 }
 
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
     padding: 0 15px;
-    margin: 0 auto;
   }
 
   .hero {
