--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,98 @@ img {
   border: none;
 }
 
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.mob-menu-btn {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: block;
+  margin-left: auto;
+  margin-top: 24px;
+  margin-right: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+.mob-menu-contacts {
+  margin-top: auto;
+}
+
+.mob-list {
+  margin-left: 16px;
+  margin-top: 24px;
+}
+.mob-list-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mob-list-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11111;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.mob-list-link:hover,
+.mob-list-link:focus {
+  color: #404bbf;
+}
+
+.current {
+}
+.mob-menu-address {
+  font-style: normal;
+  margin-bottom: 48px;
+}
+.menu-address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-left: 16px;
+}
+.address-mob-list-item {
+}
+.address-mob-list-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.address-mob-list-link:hover,
+.address-mob-list-link:focus {
+  color: #404bbf;
+}
+
+.menu-list-icon {
+  margin-left: 16px;
+  display: flex;
+  gap: 40px;
+  width: 100%;
+  height: 100%;
+}
+.menu-list-item-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.menu-icon {
+}
+.icon {
+}
+
 .hero {
   background: #2e2f42;
   padding: 72px 0;
