--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,9 @@ img {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  padding: 24px 24px 40px 16px;
+  display: flex;
+  flex-direction: column;
 }
 .mob-menu-btn {
   width: 24px;
@@ -105,20 +108,14 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   display: block;
   margin-left: auto;
-  margin-top: 24px;
-  margin-right: 24px;
-  display: flex;
-  flex-direction: column;
+  cursor: pointer;
 }
 
-.mob-menu-contacts {
-  margin-top: auto;
-}
-
-.mob-list {
-  margin-left: 16px;
+.mob-menu-nav {
+  margin-bottom: auto;
   margin-top: 24px;
 }
+
 .mob-list-item:not(:last-child) {
   margin-bottom: 40px;
 }
@@ -135,8 +132,6 @@ img {
   color: #404bbf;
 }
 
-.current {
-}
 .mob-menu-address {
   font-style: normal;
   margin-bottom: 48px;
@@ -145,10 +140,8 @@ img {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-left: 16px;
 }
-.address-mob-list-item {
-}
+
 .address-mob-list-link {
   font-weight: 500;
   font-size: 20px;
@@ -157,13 +150,15 @@ img {
   color: #434455;
 }
 
-.address-mob-list-link:hover,
-.address-mob-list-link:focus {
+.contact-number {
+  color: #4d5ae5;
+}
+
+.nav-studio {
   color: #404bbf;
 }
 
 .menu-list-icon {
-  margin-left: 16px;
   display: flex;
   gap: 40px;
   width: 100%;
@@ -172,11 +167,6 @@ img {
 .menu-list-item-icon {
   width: 40px;
   height: 40px;
-}
-
-.menu-icon {
-}
-.icon {
 }
 
 .hero {
