--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ img {
   padding: 24px 24px 40px 16px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 .mob-menu-btn {
   width: 24px;
@@ -106,7 +107,9 @@ img {
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: auto;
   cursor: pointer;
 }
@@ -125,6 +128,7 @@ img {
   line-height: 1.11111;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-list-link:hover,
@@ -148,6 +152,11 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-mob-list-link:hover {
+  color: #4d5ae5;
 }
 
 .contact-number {
@@ -164,6 +173,27 @@ img {
   width: 100%;
   height: 100%;
 }
+
+.menu-icon {
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #f4f4fd;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-icon:hover {
+  background-color: #31d0aa;
+}
+
+.menu-icon:focus {
+  background-color: #31d0aa;
+}
+
 .menu-list-item-icon {
   width: 40px;
   height: 40px;
@@ -866,6 +896,11 @@ img {
 
   .header-list-link:hover,
   .header-list-link:focus {
+    color: #404bbf;
+  }
+
+  .current {
+    position: relative;
     color: #404bbf;
   }
 
