--- a/css/styles.css
+++ b/css/styles.css
@@ -564,17 +564,9 @@ img {
 
 .footer-container {
   display: flex;
-  flex-wrap: wrap;
-}
-
-.footer-studio {
-  margin-bottom: 72px;
-}
-
-.footer-social {
-  margin-bottom: 72px;
-  margin-left: auto;
-  margin-right: auto;
+  flex-direction: column;
+  align-items: center;
+  gap: 72px;
 }
 
 .footer-form {
@@ -1043,6 +1035,9 @@ img {
   .footer-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    align-items: baseline;
+    gap: 72px 24px;
     max-width: 584px;
   }
 
@@ -1219,12 +1214,10 @@ img {
 
   .footer-studio {
     margin-right: 120px;
-    margin-bottom: 0;
   }
 
   .footer-social {
     margin-right: 80px;
-    margin-bottom: 0;
   }
 
   .footer-form {
